procrastination/main.css
/* ... */
@media (max-width: 709px) {
	
	.plug {
		margin-top: 0.2em;
		padding-top: 0em;
		padding-bottom: 0.5em;
		text-align: center; 
		
		font-size: 2em;
	}
	#phone {
		margin-left: 15em;
		width: 200px;
	}
	#insta-image {
		top: 21.3em;
		left: 15.5em;
		width: 180px;
		height: 385px;
	}

	#instagram-description {
		top: 46em;
		left: 8em;
		
		font-size: 1.1em;
		margin-right: 3em;
		width: 400px;
		padding: 2em;
	}
}

@media (max-width: 650px) {
	
	.plug {
		margin-top: 0.2em;
		padding-top: 0em;
		padding-bottom: 0.5em;
		text-align: center; 
		
		font-size: 2em;
	}
	#phone {
		margin-left: 13em;
		width: 200px;
	}
	#insta-image {
		top: 21.3em;
		left: 13.5em;
		width: 180px;
		height: 385px;
	}

	#instagram-description {
		top: 46em;
		left: 4.5em;
		
		font-size: 1.1em;
		margin-right: 3em;
		width: 400px;
		padding: 2em;
	}
}
@media (max-width: 600px) {
	
	.plug {
		margin-top: 0.2em;
		padding-top: 0em;
		padding-bottom: 0.5em;
		text-align: center; 
		
		font-size: 2em;
	}
	#phone {
		margin-left: 11.5em;
		width: 200px;
	}
	#insta-image {
		top: 21.3em;
		left: 12em;
		width: 180px;
		height: 385px;
	}

	#instagram-description {
		top: 46em;
		left: 3em;
		
		font-size: 1.1em;
		margin-right: 3em;
		width: 400px;
		padding: 2em;
	}
}

@media (max-width: 550px) {
	
	.plug {
		margin-top: 0.2em;
		padding-top: 0em;
		padding-bottom: 0.5em;
		text-align: center; 
		
		font-size: 2em;
	}
	#phone {
		margin-left: 10em;
		width: 200px;
	}
	#insta-image {
		top: 21.3em;
		left: 10.5em;
		width: 180px;
		height: 385px;
	}

	#instagram-description {
		top: 50em;
		left: 1.5em;
		
		font-size: 1em;
		margin-right: 3em;
		width: 400px;
		padding: 1em;
	}
}

/* third page */

#third-page {
	position: relative;
	top: 700px;
	height: 1000px;
}

.deceptive {
	font-family: MightyBrush, Times;
	font-size: 5em;
	text-align: center;
}


 .images {
	margin: 3em 0 0;
}
/*cat photo*/

 .photo {
 	margin: 0;
	margin-top: 8em;
 	position: relative;

 }

 .photo img {
	max-width: 100%;
	height: auto;
 	display: block;
 }

 .photo-description {
 	position: absolute;
 	z-index: 100;
 	bottom: 0em;
 	left: 0em;
 	right: 0em;
 	color: white;
	background: rgba(0,0,0,0.6); 
	padding-bottom: 2em;
	text-align: center;
    box-sizing: border-box; 
	transition: all ease-in-out 250ms;
	font-size: 1.3em;
 }

 .photo-description p {
 	margin: 1em;
 }


@media (min-width: 37rem) {
	.photo {
		width: 50%;
		float: left;
	}
	.last-photo {
		display: block;	
		float: none;
		margin-left: auto;
		margin-right: auto;

	}
}

@media (min-width: 60rem) {
	.photo {
		width: 33.333334%;
		overflow: hidden; /* hides them */
		float: left;
	}

	.photo-description {
		transform: translateY(150%); /*offsets them down by 150% */
	}

	.photo:hover .photo-description {
		transform: translateY(0%);
	}
	
	.last-photo {
		margin-left: 0em;
	}
}

/*button*/
.button {
	display: inline-block;
	text-decoration: none;
	text-transform: uppercase;
	border-width: 2px;
	border-style: solid;
	padding: 0.5em 1.75em;
	font-size: .8rem;
	font-weight: 700;
	color: #4881FF;
	border-color: #4881FF;
}


.button:hover,
.button:focus {
	background:#4881FF;
	color:#232323;
}

@media (max-width: 1930px) {
	#third-page {
		height: 960px;
	}
}

@media (max-width: 1290px) {
	#third-page {
		height: 660px;
	}
}

@media (max-width: 1200px) {
	#third-page {
		top: 450px;
		height: 700px;
	}
	
	.photo {
		margin-top: 3em;
	}
	.photo-description {
		font-size: 1em;
	}
	
	.deceptive {
		font-size: 4em;
	}
	
	.button {
	font-size: .7rem;
}

	
}

@media (max-width: 1100px) {
	#third-page {
		top: 300px;
		height: 600px;
	}
	.photo {
		margin-top: 0em;
	}
}

@media (max-width: 800px) {
	#third-page {
		top: 600px;
		height: 600px;
	}
	.photo { 
		margin-top: 0;
	}
}

/* fourth page */

#fourth-page {
	position: relative;
	top: 700px;
	height: 1000px;
}

#dr-photo {
	border-radius: 50%;
	margin-top: 3em;
	margin-left: 10em;
}

#quotation-mark {
	position: absolute;
	font-size: 15em;
	top: -0.1em;
	left: 2em;
}

#quote {
	font-size: 4em;
	margin-top: 2em;
	margin-left: 2em;
	font-family: Quote Helvetica;
	width: 15em;
	text-indent: 1.3em;
}

#citation {
	font-size: 2em; 
	margin-top: 0; 
	margin-left: 25em;
	font-family: Ageo;
}

#citat-line {
	border-bottom: double;
	border-bottom-width: 0.2em;
	position: absolute;
	width: 550px;
	left: 13em;
	top: 42.33em;
}

footer {
	position: relative; 
	top: 40em;
}

#copyright {
	display: inline;
	position: absolute;
	text-align: center;
	color: #999999;
	margin-left: 0.4%;
	top: 1.6em;
}

#logo {
	width: 110px;
	display: inline-block;
	margin-left: 38%;
	margin-right: auto;
}

